issue number 5 & 6 - modal off screen on tablet

--- a/src/sass/_view_grid.scss
+++ b/src/sass/_view_grid.scss
@@ -11,6 +11,12 @@
 
   //scroll area (does not scroll - scrolls on main"
   // todo
+
+  #modal-anchor {
+    position: absolute;
+    right: 0;
+    left: 0;
+  }
   .scroll {
     flex-grow: 1;
     flex-shrink: 1;
